fix: corrigir criação de alertas e remover emojis das notificações
- Fix serialização LocalDateTime com configuração flexível do Jackson
- Fix campo 'is_disparo_recorrente' sem valor padrão na entidade Alerta
- Remove emojis da interface de listagem de notificações
- Adiciona tratamento de erros melhorado no backend