@@ -4,15 +4,12 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import br.com.smartvalidity.exception.SmartValidityException;
 import br.com.smartvalidity.model.dto.AlertaDTO;
-import br.com.smartvalidity.model.dto.AlertaRequestDTO;
-import br.com.smartvalidity.model.dto.AlertaResponseDTO;
 import br.com.smartvalidity.model.entity.Alerta;
 import br.com.smartvalidity.model.entity.ItemProduto;
 import br.com.smartvalidity.model.entity.Produto;
@@ -43,71 +40,75 @@ public class AlertaService {
     @Autowired
     private NotificacaoService notificacaoService;
 
-    // ===== MÉTODOS LEGACY (compatibilidade com DTOs antigos) =====
-
-    public AlertaResponseDTO create(AlertaRequestDTO dto) {
+    public AlertaDTO.Response create(AlertaDTO.Request dto) {
         Alerta alerta = dto.toEntity();
         alerta = alertaRepository.save(alerta);
-        return AlertaResponseDTO.fromEntity(alerta);
+        return AlertaDTO.Response.fromEntity(alerta);
     }
 
-    public List<AlertaResponseDTO> findAll() {
+    public List<AlertaDTO.Response> findAll() {
         return alertaRepository.findAll().stream()
-                .map(AlertaResponseDTO::fromEntity)
-                .collect(Collectors.toList());
+                .map(AlertaDTO.Response::fromEntity)
+                .toList();
     }
 
-    public Optional<AlertaResponseDTO> findById(Integer id) {
-        return alertaRepository.findById(id).map(AlertaResponseDTO::fromEntity);
+    public Optional<AlertaDTO.Response> findById(Integer id) {
+        return alertaRepository.findById(id).map(AlertaDTO.Response::fromEntity);
     }
 
-    public Optional<AlertaResponseDTO> update(Integer id, AlertaRequestDTO dto) {
-        return alertaRepository.findById(id).map(alerta -> {
-            alerta.setTitulo(dto.getTitulo());
-            alerta.setDescricao(dto.getDescricao());
-            alerta.setDataHoraDisparo(dto.getDataHoraDisparo());
-            alerta.setDisparoRecorrente(dto.isDisparoRecorrente());
-            alerta.setFrequenciaDisparo(dto.getFrequenciaDisparo());
-            // Relacionamentos podem ser atualizados aqui se necessário
-            alerta = alertaRepository.save(alerta);
-            return AlertaResponseDTO.fromEntity(alerta);
-        });
+    public Optional<AlertaDTO.Response> update(Integer id, AlertaDTO.Request dto) {
+        return alertaRepository.findById(id)
+                .map(alerta -> {
+                    alerta.setTitulo(dto.getTitulo());
+                    alerta.setDescricao(dto.getDescricao());
+                    alerta.setDataHoraDisparo(dto.getDataHoraDisparo());
+                    alerta.setDisparoRecorrente(dto.isDisparoRecorrente());
+                    if (dto.getFrequenciaDisparo() != null) {
+                        alerta.setFrequenciaDisparo(dto.getFrequenciaDisparo().name());
+                    }
+                    return AlertaDTO.Response.fromEntity(alertaRepository.save(alerta));
+                });
     }
 
     public void delete(Integer id) {
         alertaRepository.deleteById(id);
     }
     
-    // ===== MÉTODOS MODERNOS PARA O FRONTEND =====
-    
-    /**
-     * Criar alerta personalizado (método moderno)
-     */
     public AlertaDTO.Listagem criarAlerta(AlertaDTO.Cadastro alertaDTO, String usuarioCriadorId) throws SmartValidityException {
         log.info("=== Criando alerta personalizado ===");
         log.info("Dados recebidos: {}", alertaDTO);
+        log.info("Data/hora disparo recebida: {} (tipo: {})", 
+            alertaDTO.getDataHoraDisparo(), 
+            alertaDTO.getDataHoraDisparo() != null ? alertaDTO.getDataHoraDisparo().getClass().getSimpleName() : "null");
         
         try {
-            // Criar entidade Alerta
+            log.info("Criando entidade Alerta...");
             Alerta alerta = new Alerta();
             alerta.setTitulo(alertaDTO.getTitulo());
             alerta.setDescricao(alertaDTO.getDescricao());
-            alerta.setTipo(TipoAlerta.PERSONALIZADO); // Sempre PERSONALIZADO para alertas criados pelo usuário
+            alerta.setTipo(TipoAlerta.PERSONALIZADO);
+            
+            log.info("Definindo data/hora de disparo...");
             alerta.setDataHoraDisparo(alertaDTO.getDataHoraDisparo());
+            log.info("Data/hora definida: {}", alerta.getDataHoraDisparo());
+            
             alerta.setDiasAntecedencia(alertaDTO.getDiasAntecedencia());
             alerta.setRecorrente(alertaDTO.getRecorrente() != null ? alertaDTO.getRecorrente() : false);
             alerta.setConfiguracaoRecorrencia(alertaDTO.getConfiguracaoRecorrencia());
-            // Sempre criar como ativo, independentemente da data/hora de disparo
             alerta.setAtivo(true);
             alerta.setLido(false);
             
-            // Definir usuário criador se fornecido
+            // Definir campos de disparo recorrente com valores padrão
+            alerta.setDisparoRecorrente(false);
+            alerta.setFrequenciaDisparo(null);
+            
+            log.info("Processando usuário criador...");
             if (usuarioCriadorId != null) {
                 Usuario usuarioCriador = usuarioService.buscarPorId(usuarioCriadorId);
                 alerta.setUsuarioCriador(usuarioCriador);
             }
             
-            // Processar usuários que receberão o alerta
+            log.info("Processando usuários do alerta...");
             Set<Usuario> usuariosAlerta = new HashSet<>();
             if (alertaDTO.getUsuariosIds() != null && !alertaDTO.getUsuariosIds().isEmpty()) {
                 for (String usuarioId : alertaDTO.getUsuariosIds()) {
@@ -115,13 +116,12 @@ public class AlertaService {
                     usuariosAlerta.add(usuario);
                 }
             }
-            // Garante que o criador receba a notificação também
             if (alerta.getUsuarioCriador() != null) {
                 usuariosAlerta.add(alerta.getUsuarioCriador());
             }
             alerta.setUsuariosAlerta(usuariosAlerta);
             
-            // Processar produtos relacionados E VINCULAR ITENS-PRODUTO
+            log.info("Processando produtos do alerta...");
             Set<Produto> produtosAlerta = new HashSet<>();
             if (alertaDTO.getProdutosIds() != null && !alertaDTO.getProdutosIds().isEmpty()) {
                 for (String produtoId : alertaDTO.getProdutosIds()) {
@@ -130,7 +130,6 @@ public class AlertaService {
                     
                     log.info("Produto vinculado ao alerta: {} (ID: {})", produto.getDescricao(), produto.getId());
                     
-                    // Buscar itens-produto não inspecionados deste produto
                     List<ItemProduto> itensNaoInspecionados = itemProdutoService
                         .buscarItensProdutoNaoInspecionadosPorProduto(produtoId);
                     
@@ -140,17 +139,20 @@ public class AlertaService {
             }
             alerta.setProdutosAlerta(produtosAlerta);
             
-            // Salvar o alerta
+            log.info("Salvando alerta no banco de dados...");
             alerta = alertaRepository.save(alerta);
+            log.info("Alerta salvo com ID: {}", alerta.getId());
             
-            // Criar notificações individuais para cada usuário
+            log.info("Criando notificações para o alerta...");
             notificacaoService.criarNotificacoesParaAlerta(alerta);
+            
+            log.info("Convertendo para DTO de resposta...");
+            AlertaDTO.Listagem response = AlertaMapper.toListagemDTO(alerta);
             
             log.info("Alerta personalizado criado com sucesso: ID {}, Título: {}", 
                 alerta.getId(), alerta.getTitulo());
             
-            // Usar AlertaMapper para conversão
-            return AlertaMapper.toListagemDTO(alerta);
+            return response;
             
         } catch (Exception e) {
             log.error("Erro ao criar alerta personalizado: {}", e.getMessage(), e);
@@ -158,20 +160,13 @@ public class AlertaService {
         }
     }
     
-    /**
-     * Buscar alerta por ID (método moderno)
-     */
     public AlertaDTO.Listagem buscarPorId(Integer id) throws SmartValidityException {
         Alerta alerta = alertaRepository.findById(id)
             .orElseThrow(() -> new SmartValidityException("Alerta não encontrado com ID: " + id));
         
-        // Usar AlertaMapper para conversão
         return AlertaMapper.toListagemDTO(alerta);
     }
     
-    /**
-     * Atualizar alerta personalizado (método moderno)
-     */
     public AlertaDTO.Listagem atualizarAlerta(Integer id, AlertaDTO.Edicao alertaDTO) throws SmartValidityException {
         log.info("=== Atualizando alerta ID {} ===", id);
         
@@ -179,12 +174,10 @@ public class AlertaService {
             Alerta alerta = alertaRepository.findById(id)
                 .orElseThrow(() -> new SmartValidityException("Alerta não encontrado com ID: " + id));
             
-            // Verificar se é um alerta personalizado (só eles podem ser editados)
             if (alerta.getTipo() != TipoAlerta.PERSONALIZADO) {
                 throw new SmartValidityException("Apenas alertas personalizados podem ser editados");
             }
             
-            // Atualizar campos básicos
             alerta.setTitulo(alertaDTO.getTitulo());
             alerta.setDescricao(alertaDTO.getDescricao());
             alerta.setDataHoraDisparo(alertaDTO.getDataHoraDisparo());
@@ -192,12 +185,14 @@ public class AlertaService {
             alerta.setRecorrente(alertaDTO.getRecorrente() != null ? alertaDTO.getRecorrente() : false);
             alerta.setConfiguracaoRecorrencia(alertaDTO.getConfiguracaoRecorrencia());
 
-            // Se requisitante enviar flag ativo, respeita; caso contrário mantém valor atual
+            // Definir campos de disparo recorrente com valores padrão
+            alerta.setDisparoRecorrente(false);
+            alerta.setFrequenciaDisparo(null);
+
             if (alertaDTO.getAtivo() != null) {
                 alerta.setAtivo(alertaDTO.getAtivo());
             }
             
-            // Atualizar usuários se fornecidos
             if (alertaDTO.getUsuariosIds() != null) {
                 Set<Usuario> usuariosAlerta = new HashSet<>();
                 for (String usuarioId : alertaDTO.getUsuariosIds()) {
@@ -207,7 +202,6 @@ public class AlertaService {
                 alerta.setUsuariosAlerta(usuariosAlerta);
             }
             
-            // Atualizar produtos se fornecidos
             if (alertaDTO.getProdutosIds() != null) {
                 Set<Produto> produtosAlerta = new HashSet<>();
                 for (String produtoId : alertaDTO.getProdutosIds()) {
@@ -217,12 +211,10 @@ public class AlertaService {
                 alerta.setProdutosAlerta(produtosAlerta);
             }
             
-            // Salvar alterações
             alerta = alertaRepository.save(alerta);
             
             log.info("Alerta {} atualizado com sucesso", id);
             
-            // Usar AlertaMapper para conversão
             return AlertaMapper.toListagemDTO(alerta);
             
         } catch (Exception e) {
@@ -231,9 +223,6 @@ public class AlertaService {
         }
     }
     
-    /**
-     * Alterna o status "ativo" de um alerta.
-     */
     public AlertaDTO.Listagem toggleAtivo(Integer id) throws SmartValidityException {
         try {
             Alerta alerta = alertaRepository.findById(id)
@@ -242,7 +231,6 @@ public class AlertaService {
             alerta.setAtivo(!Boolean.TRUE.equals(alerta.getAtivo()));
             alerta = alertaRepository.save(alerta);
 
-            // Usar AlertaMapper para conversão
             return AlertaMapper.toListagemDTO(alerta);
         } catch (Exception e) {
             log.error("Erro ao alternar status ativo do alerta {}: {}", id, e.getMessage(), e);
@@ -250,14 +238,9 @@ public class AlertaService {
         }
     }
 
-    /**
-     * Buscar alertas aplicando filtros, com suporte a paginação simples em memória.
-     */
     public List<AlertaDTO.Listagem> filtrarAlertas(AlertaDTO.Filtro filtro) {
-        // Carregar todos e filtrar em memória (simples e sem custo de complexidade)
         List<Alerta> todos = alertaRepository.findAll();
 
-        // ----- FILTROS -----
         var stream = todos.stream();
 
         if (filtro.getTitulo() != null && !filtro.getTitulo().isBlank()) {
@@ -284,10 +267,8 @@ public class AlertaService {
             stream = stream.filter(a -> a.getDataHoraDisparo() != null && !a.getDataHoraDisparo().isAfter(filtro.getDataFinalDisparo()));
         }
 
-        // Coleta pós-filtro para aplicação de sorting / paginação
         List<Alerta> filtrados = stream.toList();
 
-        // ----- SORT -----
         String sortBy = filtro.getSortBy() != null ? filtro.getSortBy() : "dataCriacao";
         boolean desc = "desc".equalsIgnoreCase(filtro.getSortDirection());
         java.util.Comparator<Alerta> comparator;
@@ -304,7 +285,6 @@ public class AlertaService {
         }
         filtrados = filtrados.stream().sorted(comparator).toList();
 
-        // ----- PAGINAÇÃO -----
         if (filtro.temPaginacao()) {
             int pagina = filtro.getPagina();
             int limite = filtro.getLimite();
@@ -317,27 +297,40 @@ public class AlertaService {
             }
         }
 
-        // Usar AlertaMapper para conversão
         return filtrados.stream()
                 .map(AlertaMapper::toListagemDTO)
                 .toList();
     }
 
-    /**
-     * Conta alertas filtrados (sem paginação).
-     */
-    public long contarAlertas(AlertaDTO.Filtro filtro) {
-        // Reutiliza a lógica de filtro, mas sem paginação
-        // Para evitar duplicação, chamar filtrarAlertas sem paginação (temporariamente)
-        int paginaOriginal = filtro.getPagina();
-        int limiteOriginal = filtro.getLimite();
-        // desativa paginação
-        filtro.setLimite(0);
-        filtro.setPagina(0);
-        long total = filtrarAlertas(filtro).size();
-        // restaura valores
-        filtro.setLimite(limiteOriginal);
-        filtro.setPagina(paginaOriginal);
-        return total;
+    public long contarAlertasFiltrados(AlertaDTO.Filtro filtro) {
+        List<Alerta> todos = alertaRepository.findAll();
+
+        var stream = todos.stream();
+
+        if (filtro.getTitulo() != null && !filtro.getTitulo().isBlank()) {
+            String termo = filtro.getTitulo().toLowerCase();
+            stream = stream.filter(a -> a.getTitulo() != null && a.getTitulo().toLowerCase().contains(termo));
+        }
+        if (filtro.getTipo() != null) {
+            stream = stream.filter(a -> filtro.getTipo().equals(a.getTipo()));
+        }
+        if (filtro.getAtivo() != null) {
+            stream = stream.filter(a -> filtro.getAtivo().equals(a.getAtivo()));
+        }
+        if (filtro.getRecorrente() != null) {
+            stream = stream.filter(a -> filtro.getRecorrente().equals(a.getRecorrente()));
+        }
+        if (filtro.getUsuarioCriador() != null && !filtro.getUsuarioCriador().isBlank()) {
+            String termo = filtro.getUsuarioCriador().toLowerCase();
+            stream = stream.filter(a -> a.getUsuarioCriador() != null && a.getUsuarioCriador().getNome() != null && a.getUsuarioCriador().getNome().toLowerCase().contains(termo));
+        }
+        if (filtro.getDataInicialDisparo() != null) {
+            stream = stream.filter(a -> a.getDataHoraDisparo() != null && !a.getDataHoraDisparo().isBefore(filtro.getDataInicialDisparo()));
+        }
+        if (filtro.getDataFinalDisparo() != null) {
+            stream = stream.filter(a -> a.getDataHoraDisparo() != null && !a.getDataHoraDisparo().isAfter(filtro.getDataFinalDisparo()));
+        }
+
+        return stream.count();
     }
 } 
